etcd-basic.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    name: client
  - port: 2380
    name: peer
  clusterIP: None
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-cluster
  labels:
    app: etcd
spec:
  selector:
    app: etcd
  ports:
  - port: 2379
    protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  serviceName: "etcd"
  replicas: 3
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.3.10
        command:
        - "etcd"
        - "--name"
        - "$(MY_POD_NAME)"
        - "--listen-peer-urls"
        - "http://$(MY_IP):2380"
        - "--listen-client-urls"
        - "http://$(MY_IP):2379,http://127.0.0.1:2379"
        - "--advertise-client-urls"
        - "http://$(MY_POD_NAME).etcd:2379"
        - "--initial-cluster-token"
        - "etcd-cluster-1"
        - "--initial-advertise-peer-urls"
        - "http://$(MY_POD_NAME).etcd:2380"
        - "--initial-cluster"
        - "etcd-0=http://etcd-0.etcd:2380,etcd-1=http://etcd-1.etcd:2380,etcd-2=http://etcd-2.etcd:2380"
        - "--initial-cluster-state"
        - "new"
        - "--data-dir"
        - "/tmp/etcd"
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
